[tool.poetry]
name = "lk-logger"
version = "6.0.0"
homepage = "https://github.com/likianta/lk-logger"
description = "Python print with source map and varnames."
readme = "README.md"
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.8"

# --- svg util ---
# html2image = { version = "^2.0.4", optional = true }
# pycairo = { version = "*", python = "^3.9", optional = true }
# selenium = { version = "*", optional = true }
svg-ultralight = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
argsense = "^0.5.8"
# html2image = "*"
ipython = "*"  # examples/start_ipython.py
lk-utils = "*"  # misc/compose_terminal_theme.py
nuitka = { version = "^2.4.10", python = "==3.12" }
svg-ultralight = "*"

[tool.poetry.extras]
ext = ["svg-ultralight"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
